--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+
+    implementation 'com.google.firebase:firebase-firestore:17.0.1'
 }
