--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
 
     implementation 'com.google.firebase:firebase-firestore:17.0.1'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
 }
