--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.szczepaniak.dawid.treningapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATIONS "/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/workoutnoteicon"
@@ -10,6 +15,15 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@string/google_maps_API_key"/>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@integer/google_play_services_version"/>
+
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait">
@@ -23,10 +37,7 @@
             android:name=".WorkoutActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".MapActivity"></activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
-
-
 
 </manifest>
