--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore:17.0.1'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 }
