--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+//    implementation 'com.google.android.gms:play-services:9.2.0'
+//    implementation 'com.google.android.gms:play-services-location:9.2.0'
+
 
     implementation 'com.google.firebase:firebase-database:16.0.1'
 
