--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -32,20 +32,16 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
-
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
-//    implementation 'com.google.android.gms:play-services:9.2.0'
-//    implementation 'com.google.android.gms:play-services-location:9.2.0'
-
-
+    //    implementation 'com.google.android.gms:play-services:9.2.0'
+    //    implementation 'com.google.android.gms:play-services-location:9.2.0'
     implementation 'com.google.firebase:firebase-database:16.0.1'
-
     implementation 'com.google.firebase:firebase-firestore:17.0.1'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.jjoe64:graphview:4.2.2'
 
 }
