--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.chibde:audiovisualizer:2.1.0'
+
 
 }
